--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve ./example/main.js --open",
-    "build": "vue-cli-service build --name vue-plotly --entry ./src/index.js --target lib",
+    "build": "vite build",
     "test:unit": "vue-cli-service test:unit --coverage",
     "lint": "vue-cli-service lint --fix",
     "build:doc": "vue-cli-service build --entry ./example/main.js --dest docs --mode development",
@@ -13,10 +13,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/David-Desmaisons/vue-plotly.git"
+    "url": "https://github.com/alabama/vue-plotly.git"
   },
   "main": "dist/vue-plotly.umd.js",
-  "module": "dist/vue-plotly.common.min.js",
+  "module": "dist/vue-plotly.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/vue-plotly.es.js",
+      "require": "./dist/vue-plotly.umd.js"
+    }
+  },
   "files": [
     "dist/*.css",
     "dist/*.map",
@@ -25,21 +31,21 @@
   ],
   "dependencies": {
     "core-js": "^3.6.4",
-    "plotly.js": "^1.52.1",
-    "vue": "^2.6.11",
+    "plotly.js-dist-min": "^2.5.1",
+    "vue": "^2.6.14",
     "vue-resize-directive": "^1.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.2",
-    "@vue/cli-plugin-eslint": "^4.1.2",
-    "@vue/cli-plugin-unit-jest": "^4.1.2",
-    "@vue/cli-service": "^4.1.2",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-unit-jest": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/test-utils": "1.0.0-beta.31",
+    "@vue/test-utils": "1.2.2",
     "@vuedoc/md": "^1.6.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.2.4",
     "bootstrap": "^4.4.1",
     "codecov": "^3.6.1",
     "eslint": "^6.8.0",
@@ -51,6 +57,8 @@
     "jest-canvas-mock": "^2.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "vite": "^2.6.3",
+    "vite-plugin-vue2": "^1.8.2",
     "vue-cli-plugin-component": "^1.12.2",
     "vue-draggable-resizable": "^2.1.0",
     "vue-highlight.js": "^3.1.0",
